# schedgen

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  schedgen.py
.github/workflows/: ci.yml
schedgen/: __main__.py  cli.py
tests/: test_schedgen.py
