[tool.poetry]
name = "schedgen"
version = "0.1.0"
description = "Schedule generator for streaming teams"
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]
readme = "README.md"

[tool.poetry.scripts]
schedgen = "schedgen.cli:APP"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.1"
toml = "^0.10.2"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
black = "^22.3.0"
types-Pillow = "^9.0.19"
types-toml = "^0.10.7"
summon-tasks = "^0.1.5"
summon-python = "^0.1.3"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.13.9"
flake8-bugbear = "^22.4.25"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.summon.plugins.python]
test-modules = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
